Fix up theming example

--- a/components/FilterButton/styles.css
+++ b/components/FilterButton/styles.css
@@ -3,6 +3,7 @@
   font-size: 0.7rem;
   margin-right: 0.5rem;
   background: var(--brand-color-primary);
+  border: none;
 }
 
 .filterButton:hover {
