--- a/themes/cool.css
+++ b/themes/cool.css
@@ -7,6 +7,7 @@
 :root {
   --brand-color-primary: #00AFBF;
   --brand-color-primary--darken: #0096A3;
-  --brand-color-light: #DBFCFF;
+  --brand-color-light: #FAFAFA;
+  --brand-color-accent: #DBFCFF;
   --brand-color-white: #FFFFFF;
 }
